# RPiUtils

./: .gitignore  CanBusNotes.md  MonoSession.sh  SeeedStudioCanShield.md  TmuxSession.sh  camera_read_stream.sh  camera_stream.sh  can_reload.sh  dd_card_clone.md  display_blank_disable.sh  display_on.sh  display_remote.md  gpio_alt.sh  locales_config.md  mouse_hide_inactivity.sh  pin_util.sh  rPi3-ap-adapter-passthrough.sh  rPi3-ap-setup.sh  rc.local  splash_screen.md  ssh_empty_passwd_root_login.sh  ssh_enable_no_monitor.md  startup.md  tty_reload.sh
C#/drivers/: Button.cs  GPIO.cs  HC595.cs  MCP2515.cs  Motor.cs  NetworkConnection.cs  NetworkService.cs  PushButton.cs  SerialConn.cs  SerialConnection.cs  Stepper.cs
Initial cleanup/: initial_cleanup.sh
Install_Linux_Kernel_Headers/: README.md  install_linux_headers.sh
Kernel_Module_Test/: Makefile  testmod.c
OpenCV Installer/: OpenCvFreshInstall.sh
OpenCV_Installer/: OpenCvFreshInstall.sh  README.md
PiGPIO/DriversContainer/: CMakeLists.txt
PiGPIO/DriversContainer/include/drivers/: PushButton.cpp  PushButton.h  Stepper.cpp  tcpserver.cpp
PiGPIO/DriversContainer/src/: Button.cpp  Button.h  CMakeLists.txt  Common.h  Config.h  Motor.cpp  Motor.h  main.cpp  time_utils.h
PiGPIO/DriversContainer/src/communication/: ServerTCP.h
PiGPIO/DriversContainer/src/drivers/: Gpio.cpp  Gpio.h  PushButton.cpp  PushButton.h  Stepper.cpp  Stepper.h  TcpServer.cpp  TcpServer.h  hal.h
PiGPIO/DriversContainer/src/peripherals/: LeftButton.h  Motor.h  RightButton.h
PiGPIO/PiGPIO_Drivers/: CMakeLists.txt  Stepper.cpp  main.cpp
PiGPIO/PiGPIO_Example/: GPIO.cpp  hal.h  make.sh
PiGPIO/PiGPIO_SPI/: make.sh  spi-pigpio-speed.c
PiGPIO/PiGPIO_Stepper/: Stepper.h  hal.h  main.cpp
PiGPIO_Example/: GPIO.cpp  hal.h
PiGPIO_Interruptions/: CMakeLists.txt  PushButton.cpp  PushButton.h  Stepper.cpp  Stepper.h  hal.h  main.cpp
PiGPIO_SPI/: README.md
RaspiCV/: .gitignore  CMakeLists.txt  README.md
RaspiCV/docs/SPI Camera/: Cam_Busy.TIF  Flowchart Camera Switch.dwg  Flowchart Camera Switch.vsd  Flusso.xps  Immagine.docx
RaspiCV/docs/SPI Camera/Documentazione Cliente/Email del 28-05-2018/: RE Scheda switch.msg  close01.py  open02.py  open03.py  open04.py  open05.py  open06.py  open07.py  test mux maggio 2018.docx
RaspiCV/docs/SPI Camera/Firmaware/: Orfeo2.py  switch.py
RaspiCV/docs/SPI Camera/Firmaware/test IVPORT/: IIC.py  picamera_iv_rev1.py
RaspiCV/scripts/: BuildAndRun.sh  camera_read_stream.sh  camera_stream.sh  load_v4l2.sh  unload_v4l2.sh
RaspiCV/src/: camera_switcher.h  main.cpp
WiringPi_Installer/: wiringpi_installer.sh
XINIT/: .xinitrc
Xinit_Installer/: xinit_installer.sh
